--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,15 +1,21 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Youtube to mp3</title>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
-    <form action="accept_data" method="POST">{% csrf_token %}
-        {{ form }}
-        <button type="submit">
-           Get Mp3!
-        </button>
-    </form>
+    <section class="youtube-to-mp3">
+        <h1>YouTube <span>To</span> Mp3</h1>
+        <form action="accept_data" method="POST">{% csrf_token %}
+            {{ form }}
+            <button type="submit">
+               Get Mp3!
+            </button>
+        </form>
+    </section>
 </body>
 </html>
