--- a/main/templates/success.html
+++ b/main/templates/success.html
@@ -10,7 +10,7 @@
 <body>
     <section class="success">
         <h1>Success!</h1>
-        <p>The mp3 file was sent to <a href="https://accounts.google.com/ServiceLogin?hl=ru&passive=true&continue=https://www.google.com/search%3Fclient%3Dubuntu%26channel%3Dfs%26q%3Dgtht%26ie%3Dutf-8%26oe%3Dutf-8">{{ email }}<span></p>
+        <p>The mp3 file was sent to <a href="https://mail.google.com/mail/">{{ email }}<span></p>
     </section>
 </body>
 </html>
